# daiflow_mvp

./: .gitignore  CLAUDE.md  CODE_REVIEW.md  CODE_REVIEW_REPORT.md  README.md  alembic.ini  pyproject.toml  requirements.txt
.claude/: settings.json
aitest/: 00_blackbox_testing_guide.md  03_test_preparation.md  04_api_crud_testing.md  05_e2e_flow_testing.md  06_sse_testing.md  07_error_and_edge_cases.md
alembic/: env.py
alembic/versions/: 03ca468a2e2f_add_prd_images_to_tasks.py  2d6b509ea8c0_add_master_hash_and_job_tables.py  (+4 more)
daiflow/: agent_executor.py  cli.py  config.py  database.py  exceptions.py  init_db_script.py  main.py  models.py  schemas.py  session_ids.py  session_runner.py  sse_manager.py  ws_manager.py
docs/: Cody_sdk.md  DaiFlow_Session抽象.md  DaiFlow_Workflow抽象.md  DaiFlow_产品文档.md  DaiFlow_前端抽象.md  DaiFlow_技术方案.md  DaiFlow_桌面端方案.md  DaiFlow_验收文档.md  Task_Todo_Workflow改造方案.md  Workflow改造方案.md  agent-framework-refactor.md  desktop-app-proposal.md  前端优化讨论.md
electron/: electron-builder-nosign.yml  electron-builder.yml  package-lock.json  package.json
frontend/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
scripts/: bump-version.sh
tests/: conftest.py  test_agent_executor.py  test_agents.py  test_api_jobs.py  test_api_projects.py  test_api_sessions.py  test_api_settings.py  test_api_tasks.py  test_api_todos.py  test_config.py  test_init_services.py  test_models.py  test_services.py  test_session_runner.py  test_session_runner_ext.py  test_sse_manager.py  test_workflow.py  test_ws_endpoint.py  test_ws_manager.py
(+119 files in other folders)
