[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "daiflow"
version = "0.1.0"
description = "AI-powered programming workbench"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "sqlalchemy>=2.0.0",
    "aiosqlite>=0.20.0",
    "greenlet>=3.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "click>=8.1.0",
    "cody-ai",
]

[project.scripts]
daiflow = "daiflow.cli:cli"

[tool.setuptools.packages.find]
include = ["daiflow*"]
